ingress-kubeadm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: someu-front-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - sonhomeuloja.com
      secretName: someu-front-tls
  rules:
    - host: sonhomeuloja.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-someu-front-angular
                port:
                  number: 443
